[package]
name = "bo"
version = "0.3.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"
structopt = "~0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0.81"

[dev-dependencies]
tempfile = "~3.3.0"
