[package]
name = "bo-bin"
version = "0.4.0"
description = "A minimalistic text editor with vim-like navigation capabilities"
authors = [ "Balthazar Rouberol <br@imap.cc>" ]
repository = "https://github.com/brouberol/bo"
documentation = "https://brouberol.github.io/bo/doc/"
keywords = ["editor", "vim-like", "minimalism"]
license = "MIT"
edition = "2018"

[[bin]]
name = "bo"
path = "src/main.rs"

[dependencies]
termion = "1"
unicode-segmentation = "1"
structopt = "~0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0.91"

[dev-dependencies]
tempfile = "~3.3.0"
